--- a/master_thesis/sections/model_flow.tex
+++ b/master_thesis/sections/model_flow.tex
@@ -25,15 +25,58 @@ Finally, we combine the two suggested approaches in a \emph{Hybrid}-Network
 
 In this Section we show how all hypernodes of \ShortT{L} could be removed. If a hypernode $v \in V$
 occurs in an augmenting path $P$ the previous node in the path must be a hyperedge node either
-$e'$ or $e''$. Further, for all $e \in I(v)$ the capacity $c_L(v,e')$ is $\infty$. This leads to
-the conclusion, if we push flow over a hypernode $v$, comming from a hyperedge node, we can redirect
+$e'$ or $e''$. Further, for all $e \in I(v)$ the capacity $c_L(v,e')$ is $\infty$. Therefore, 
+if we push flow over a hypernode $v$, comming from a hyperedge node, we can redirect
 the flow to any hyperedge node $e' \in I(v)$ during the whole maximum flow calculation, because 
-$c_L(v,e') = \infty$. A hypernode $v$ acts as a \emph{bridge} between all incident hyperedges in the 
-\emph{Lawler}-Network. Therefore, the idea is to remove all hypernodes from \ShortT{L} and instead
-inserting for all $v \in V$ a clique between all $e_1, e_2 \in I(v)$ with $e_1 \neq e_2$.
-In the following we will define our new network more general and show how to remove
-any subset $V' \subseteq V$.
+$c_L(v,e') = \infty$. The following lemma is central for our first sparsifying 
+technique. We will denote all incomming edges of a node $u$ with
+$in(u) := \{v\ |\ (v,u) \in E\}$ and all outgoing edges with 
+$out(u) := \{v\ |\ (u,v) \in E\}$. 
 
+\begin{lemma}
+\label{lemma:node_removal}
+Let $G = (V,E,c)$ be a flow network and $u \in V$ a node where
+$\forall v \in in(u): c(v,u) = \infty$ and $\forall w \in out(u): c(u,w) = \infty$.
+Further, let $G(u) = (V\setminus\{u\}, E_u, c_u)$ be the flow network obtained by removing
+$u$ and insert a directed edge between each $v \in in(u)$ and $w \in out(u)$ with $c_u(v,w) = \infty$.
+Let $f$ be a maximum $(S,T)$-flow of G and $f'$ a maximum $(S,T)$-flow of
+$G(u)$.
+\[|f| < \infty \text{ and } u \notin S\cup T \Rightarrow |f| = |f'|\]
+\end{lemma}
+
+\begin{proof}
+Let $f$ be a maximum $(S,T)$-flow of $G$. We define a maximum $(S,T)$-flow $f'$ 
+of $G(u)$ as follows:
+\[ 
+f'(v,w) =  
+  \begin{cases}
+      \frac{f(v,u)f(u,w)}{\sum_{w \in out(u)} f(u,w)}, & \text{if } v \in in(u), w \in out(u) \\
+      f(v,w), & \text{otherwise}
+   \end{cases} 
+\]
+$f'$ is choosen in such a way that for all $v \in in(u): \sum_{w \in out(u)} f'(v,w) = f(v,u)$
+and for all $w \in out(u): \sum_{v \in in(u)} f'(v,w) = f(u,w)$. Therefore, $f'$
+satisfies the flow conservation constraint and is an valid flow function. Since
+$u \notin S\cup T$, it follows that $|f| = |f'|$. \\
+Let $f'$ be a maximum $(S,T)$-flow of $G(u)$. We define a maximum $(S,T)$-flow $f$
+of $G$ as follows:
+\[
+f(v,w) =  
+  \begin{cases}
+      \sum_{x \in in(u)} f'(x,w), & \text{if } v = u \\
+      \sum_{x \in out(u)} f'(v,x), & \text{if } w = u \\
+      f'(v,w), & \text{otherwise}
+   \end{cases} 
+\]
+The amount of flow from each $v \in in(u)$ to each $w \in out(u)$ of flow function
+$f'$ is redirected over $u$ in $f$. Therefore, $f$ is an valid flow function.
+Since $v \notin S\cup T$, it follows that $|f| = |f'|$.
+\end{proof}
+
+In \ShortT{L} all incomming and outgoing edges of a hypernode $v$ have 
+capacity equal to $\infty$. The incomming edges are all $e'' \in I(v)$ and
+the outgoing edges are all $e' \in I(v)$. Therefore, we can construct the
+following network with Lemma \ref{lemma:node_removal}:
 
 \begin{definition}
 Let $T_H$ be a transformation that converts a hypergraph \HypergraphDef~into 
@@ -41,7 +84,7 @@ a flow network \ExtendedT{H}{V'} with $V' \subseteq V$. \ShortExT{H}{V'} is defi
 \begin{enumerate}
 \item $V_H = V\setminus V' \bigcup\limits_{e \in E}\ \{e', e''\}$
 \item $\forall v \in V'$ we add a directed edge $(e_1'', e_2'),\ \forall e_1, e_2 \in I(v)$ 
-      with $e_1 \neq e_2$ with capacity $c_H(e_1'', e_2') = \infty$ (clique expansion).
+      with $e_1 \neq e_2$ with capacity $c_H(e_1'', e_2') = \infty$ (Lemma \ref{lemma:node_removal}).
 \item $\forall e \in E$ we add a directed edge $(e',e'')$
       with capacity $c_H(e',e'') = \omega(e)$ (same as in \ShortT{L}).
 \item $\forall v \in V\setminus V'$ we add for each incident hyperedge $e \in I(v)$ two directed
@@ -50,10 +93,10 @@ a flow network \ExtendedT{H}{V'} with $V' \subseteq V$. \ShortExT{H}{V'} is defi
 \end{enumerate} 
 \end{definition}
 
-An example of the transformation is shown in \autoref{img:heuer_network}. To show
-the correctness of \ShortExT{H}{V'}, we need to proof that a minimum-capacity $(S,T)$-cutset
-in \ShortExT{H}{V'} is equal with a minimum-weight $(S,T)$-cutset in $H$. However,
-in the correctness proof we need a preparing lemma.
+An example of the transformation is shown in \autoref{img:heuer_network}.
+We have to proof that a minimum-capacity $(S,T)$-cutset
+of \ShortExT{H}{V'} is equal with a minimum-weight $(S,T)$-cutset of $H$. However,
+we need a preparing lemma in the correctness proof.
 
 \begin{figure}
 \centering
@@ -64,26 +107,25 @@ in the correctness proof we need a preparing lemma.
 \end{figure}
 
 \begin{lemma}
-\label{lemma:lemma1}
-Let $G = (V,E,c)$ be a graph with a capacity function $c: E \rightarrow \mathbb{R}_+$. Further, 
-let $S$ and $T$ be a source and sink set with $S \cap T = \emptyset$ and
-$\forall s \in S:\forall (s,v) \in E: c(s,v) = \infty$ and $\forall t 
-\in T:\forall (v,t) \in E: c(v,t) = \infty$. \\
-For any $V' \subseteq V$ a minimum-capacity $(S,T)$-cutset in $G$ is equal with a minimum-capacity
-$(S',T')$-cutset in $G$, where $S' = S\setminus V'\ \cup \bigcup\limits_{s' \in I(V' \cap S)} \{s'\}$ and 
-$T' = T\setminus V'\ \cup \bigcup\limits_{t' \in I(V' \cap T)} \{t'\}$ and $S' \cap T' = \emptyset$.
+\label{lemma:source_and_sink_removal}
+Let $G = (V,E,c)$ be a flow network and $f$ a maximum $(S,T)$-flow of $G$.
+Further, let $s \in S$ be a source node with $\forall v \in out(s): c(s,v) = \infty$
+and $t \in T$ be a sink node with $\forall v \in in(t): c(v,t) = \infty$.
+$f_s$ is a maximum $(S',T)$-flow of $G(s)$ and $f_t$ is a maximum $(S,T')$-flow
+of $G(t)$ with $S' = S\setminus \{s\} \cup out(s)$ and $T' = T \setminus \{t\}
+\cup in(t)$.
+\[|f| < \infty \Rightarrow |f| = |f_s| = |f_t|\]
 \end{lemma}
 
 \begin{proof}
-Let $G'$ be the graph obtained by removing all $v \in V' \cap (S \cup T)$. If
-the minimum-capacity $(S,T)$-cutset in $G$ is smaller than $\infty$, then no outgoing
-edge of a node $s \in S$ and no incomming edge of a node $t \in T$ can be cut, because for all
-those edges $e$ the capacity $c(e) = \infty$. Therefore, if $S' \cap T' = \emptyset$ each
-minimum-capacity $(S,T)$-cutset in $G$ must be equal with a minimum-capacity $(S',T')$-cutset
-in $G'$. \\
-Each $(S,T)$-cutset in $G$ is also a $(S',T')$-cutset in $G'$ and vice versa.
-If the minimum-capacity $(S,T)$-cutset in $G$ is $\infty$, every cutset separating
-$(S,T)$ resp. $(S',T')$ is a minimum $(S,T)$- resp. $(S',T')$-cutset.
+In Section \ref{sec:applications} we have described how to solve a \emph{multi-source 
+multi sink} flow problem by adding a super source node $a$ and super sink node $b$ to the network
+and connect $a$ with all sources $s' \in S$ and all sinks $t' \in T$ with $b$.
+For $s' \in S: c(a,s') = \infty$ and for $t' \in T: c(t',b) = \infty$. With Lemma
+\ref{lemma:node_removal} follows, that we can remove $s$ from $G$ and insert
+a directed edge from $a$ to each $v \in out(s)$ (equal to $G(s)$) and $|f| = |f_s|$. The new flow problem
+corresponds to the \emph{multi-source multi-sink} problem with $S'$ and $T$ as source
+and sink set. The proof for $G(t)$ is equivalent.
 \end{proof}
 
 As a consequence of this lemma, we could replace (or even remove) 
@@ -96,77 +138,86 @@ problem. Because for all incomming resp. outgoing edges of vertices $v$ of
 \label{theorem:st_cutset_equal}
 A minimum-weight $(S,T)$-cutset of a hypergraph \HypergraphDef~(with $S,T \subseteq V,
 S \cap T = \emptyset$) is equivalent with a minimum-capacity $(S',T')$-cutset of the
-flow network \ExtendedT{H}{V'} ($V' \subseteq V$), where $S' = S \setminus V'\ \cup \bigcup\limits_{e \in I(V' \cap S)} \{e'\}$ and 
+flow network \ShortExT{H}{V'} ($V' \subseteq V$) with $S' = S \setminus V'\ \cup \bigcup\limits_{e \in I(V' \cap S)} \{e'\}$ and 
 $T' = T \setminus V'\ \cup \bigcup\limits_{e \in I(V'\cap T)} \{e''\}$.
 \label{theorem:heuer_network}
 \end{theorem}
 
 \begin{proof}
 
-Consider the bipartite graph representation $G_* = (V_*,E_*,c_*)$ 
-of a hypergraph $H = (V,E,c,\omega)$ presented in Section \ref{sec:hypergraph} and \ref{sec:related_lawler}, 
-where for all $v \in V: c_*(v) = \infty$ and for all $e \in E: c_*(e) = 
-\omega(e)$. A minimum-weight $(S,T)$-vertex separator in $G_*$ is equal
-with a minimum-weight $(S,T)$-cutset in $H$. A minimum-weight $(S,T)$-vertex separator can be calculated
-by finding a minimum-capacity $(S,T)$-cutset in \ShortT{L}. Let $G_H$ be the graph obtained by removing
-all $v \in V'\setminus (S \cup T)$ of $G_*$ and adding a clique between all $e \in I(v)$. 
-A minimum-weight $(S,T)$-vertex separator in $G_H$ can be calculated by finding a 
-minimum-capacity $(S,T)$-cutset in our new network \ShortExT{H}{V'\setminus (S \cup T)}.
-We will show that each vertex separator in $G_*$ is also a vertex separator in $G_H$ and
-vice versa. With Lemma \ref{lemma:lemma1} we can show that each minimum $(S,T)$-cutset
-of \ShortExT{H}{V'\setminus (S \cup T)} is equal with a minimum $(S',T')$-cutset of
-\ShortExT{H}{V'} and conclude the proof. We will denote a vertex separator of a graph $G$ with 
-$\V{G}$ and define $V'' := V' \setminus (S \cup T)$. 
-We will show, that $\V{G_*} = \V{G_H}$ with the restriction $\V{G_*} \subseteq E$ and
-$\V{G_H} \subseteq E$.
+Applying Lemma \ref{lemma:node_removal} and \ref{lemma:source_and_sink_removal}
+on all nodes $v \in V'$ of flow network \ShortT{L} yields to network
+\ShortExT{H}{V'} with $S'$ and $T'$ as source and sink sets. A maximum
+$(S,T)$-flow $f_L$ of \ShortT{L} is then equal with a maximum $(S',T')$-flow $f_H$
+of \ShortExT{H}{V'}. Since $|f_L| < \infty$, only edges between hyperedge 
+nodes are contained in a minimum $(S,T)$-cutset of \ShortT{L}. Since $|f_L| = |f_H|$, the same
+holds for a minimum $(S',T')$-cutset $E_{min}$ of \ShortExT{H}{V'}. Therefore, $E_{min}$
+is equal with a minimum-weight $(S,T)$-cutset of $H$.
 
-Assume that $\V{G_*} \subseteq E$ is not a vertex separator in $G_H$. After removing all $e \in \V{G_*}$ of
-$G_H$, there exists still a path $P_H = \{v_1, \ldots, v_k\}$ with $v_1 \in S$ and
-$v_k \in T$ of $G_H$. We can extend $P_H$ to a path $P_*$ in $G_*$.
-We define $P_* := P_H$ and replaces every occurence of a sequence $v_i = e_1 \in E$ and
-$v_{i+1} = e_2 \in E$ with a triple $(e_1,v,e_2)$ in $P_*$, where $v \in e_1 \cap e_2 \cap V''$
-(not empty per construction). $P_*$ does not contain a vertex of $\V{G_*}$, because
-we removed all hyperedge nodes $e \in \V{G_*}$ from $G_H$ before construction of $P_*$ 
-and a hypernode is not part of  the vertex separator $\V{G_*} \subseteq E$ per defintion. 
-$P_*$ connects $S$ and $T$ in $G_*$, which is a contradiction that $\V{G_*}$ 
-is a vertex separator in $G_*$.
-
-Assume that $\V{G_H} \subseteq E$ is not a vertex separator in $G_*$. After removing all $e \in \V{G_H}$ of
-$G_*$, there exists still a path $P_* = \{v_1, \ldots, v_k\}$ with $v_1 \in S$ and
-$v_k \in T$ of $G_*$. We can extend $P_*$ to a path $P_H$ in $G_H$.
-We define $P_H := P_*$ and remove all $v \in P_* \cap V''$ from $P_H$. $G_*$ is a bipartite
-graph per definition. Therefore, each path $P_*$ in $G_*$ is an alternating path of hypernodes and
-hyperedges. The predecessor and successor of a hypernode $v \in P_* \cap V''$ must be hyperedges
-$e_1$ and $e_2$. If $v \in V''$, then $v$ is not contained $G_H$. Instead, there is
-a clique between all $e \in I(v) \Rightarrow$ $(e_1,e_2)$ is contained in $G_H$.
-$P_H$ not contain any vertex of $\V{G_H}$, because we removed all hyperedge nodes $e \in \V{G_H}$ 
-from $G_*$. $P_H$ connects $S$ and $T$ in $G_H$, which is a contradiction that 
-$\V{G_H}$ is a vertex separator in $G_H$.
-
-A minimum-weight $(S,T)$-vertex separator in $G_*$ and $G_H$ contains only hyperedges, because
-the weight of all hypernodes in $G_*$ and $G_H$ is $\infty$. Therefore, each minimum-weight
-$(S,T)$-vertex separator in $G_*$ is also a minimum-weight $(S,T)$-vertex separator in $G_H$,
-because $c(\V{G_*}) = c(\V{G_H})$. With Lemma \ref{lemma:lemma1} follows that
-a minimum-weight $(S,T)$-vertex separator in $G_*$ resp. $G_H$  can also be 
-calculated by finding a minimum-capacity $(S',T')$-cutset in \ShortT{L} resp. \ShortExT{H}{V'}. 
-Therefore, there exists a equivalence between a minimum-weight $(S,T)$-cutset 
-$E_{min}$ of $H$ and the following statements: 
-
-$E_{min}$ is a minimum$\ldots$
-\begin{enumerate}
-\item $\ldots$-weight $(S,T)$-cutset in $H$
-\item $\ldots$-weight $(S,T)$-vertex separator in $G_*$
-\item $\ldots$-capacity $(S,T)$-cutset in \ShortT{L}
-\item $\ldots$-capacity $(S',T')$-cutset in \ShortT{L} (follows from (iii) with Lemma \ref{lemma:lemma1})
-\item $\ldots$-weight $(S,T)$-vertex separator in $G_H$
-\item $\ldots$-capacity $(S,T)$-cutset in \ShortExT{H}{V''}
-\item $\ldots$-capacity $(S',T')$-cutset in \ShortExT{H}{V'} (follows from (vi) with Lemma \ref{lemma:lemma1})
-\end{enumerate}
+%Consider the bipartite graph representation $G_* = (V_*,E_*,c_*)$ 
+%of a hypergraph $H = (V,E,c,\omega)$ presented in Section \ref{sec:hypergraph} and \ref{sec:related_lawler}, 
+%where for all $v \in V: c_*(v) = \infty$ and for all $e \in E: c_*(e) = 
+%\omega(e)$. A minimum-weight $(S,T)$-vertex separator in $G_*$ is equal
+%with a minimum-weight $(S,T)$-cutset in $H$. A minimum-weight $(S,T)$-vertex separator can be calculated
+%by finding a minimum-capacity $(S,T)$-cutset in \ShortT{L}. Let $G_H$ be the graph obtained by removing
+%all $v \in V'\setminus (S \cup T)$ of $G_*$ and adding a clique between all $e \in I(v)$. 
+%A minimum-weight $(S,T)$-vertex separator in $G_H$ can be calculated by finding a 
+%minimum-capacity $(S,T)$-cutset in our new network \ShortExT{H}{V'\setminus (S \cup T)}.
+%We will show that each vertex separator in $G_*$ is also a vertex separator in $G_H$ and
+%vice versa. With Lemma \ref{lemma:lemma1} we can show that each minimum $(S,T)$-cutset
+%of \ShortExT{H}{V'\setminus (S \cup T)} is equal with a minimum $(S',T')$-cutset of
+%\ShortExT{H}{V'} and conclude the proof. We will denote a vertex separator of a graph $G$ with 
+%$\V{G}$ and define $V'' := V' \setminus (S \cup T)$. 
+%We will show, that $\V{G_*} = \V{G_H}$ with the restriction $\V{G_*} \subseteq E$ and
+%$\V{G_H} \subseteq E$.
+%
+%Assume that $\V{G_*} \subseteq E$ is not a vertex separator in $G_H$. After removing all $e \in \V{G_*}$ of
+%$G_H$, there exists still a path $P_H = \{v_1, \ldots, v_k\}$ with $v_1 \in S$ and
+%$v_k \in T$ of $G_H$. We can extend $P_H$ to a path $P_*$ in $G_*$.
+%We define $P_* := P_H$ and replaces every occurence of a sequence $v_i = e_1 \in E$ and
+%$v_{i+1} = e_2 \in E$ with a triple $(e_1,v,e_2)$ in $P_*$, where $v \in e_1 \cap e_2 \cap V''$
+%(not empty per construction). $P_*$ does not contain a vertex of $\V{G_*}$, because
+%we removed all hyperedge nodes $e \in \V{G_*}$ from $G_H$ before construction of $P_*$ 
+%and a hypernode is not part of  the vertex separator $\V{G_*} \subseteq E$ per defintion. 
+%$P_*$ connects $S$ and $T$ in $G_*$, which is a contradiction that $\V{G_*}$ 
+%is a vertex separator in $G_*$.
+%
+%Assume that $\V{G_H} \subseteq E$ is not a vertex separator in $G_*$. After removing all $e \in \V{G_H}$ of
+%$G_*$, there exists still a path $P_* = \{v_1, \ldots, v_k\}$ with $v_1 \in S$ and
+%$v_k \in T$ of $G_*$. We can extend $P_*$ to a path $P_H$ in $G_H$.
+%We define $P_H := P_*$ and remove all $v \in P_* \cap V''$ from $P_H$. $G_*$ is a bipartite
+%graph per definition. Therefore, each path $P_*$ in $G_*$ is an alternating path of hypernodes and
+%hyperedges. The predecessor and successor of a hypernode $v \in P_* \cap V''$ must be hyperedges
+%$e_1$ and $e_2$. If $v \in V''$, then $v$ is not contained $G_H$. Instead, there is
+%a clique between all $e \in I(v) \Rightarrow$ $(e_1,e_2)$ is contained in $G_H$.
+%$P_H$ not contain any vertex of $\V{G_H}$, because we removed all hyperedge nodes $e \in \V{G_H}$ 
+%from $G_*$. $P_H$ connects $S$ and $T$ in $G_H$, which is a contradiction that 
+%$\V{G_H}$ is a vertex separator in $G_H$.
+%
+%A minimum-weight $(S,T)$-vertex separator in $G_*$ and $G_H$ contains only hyperedges, because
+%the weight of all hypernodes in $G_*$ and $G_H$ is $\infty$. Therefore, each minimum-weight
+%$(S,T)$-vertex separator in $G_*$ is also a minimum-weight $(S,T)$-vertex separator in $G_H$,
+%because $c(\V{G_*}) = c(\V{G_H})$. With Lemma \ref{lemma:lemma1} follows that
+%a minimum-weight $(S,T)$-vertex separator in $G_*$ resp. $G_H$  can also be 
+%calculated by finding a minimum-capacity $(S',T')$-cutset in \ShortT{L} resp. \ShortExT{H}{V'}. 
+%Therefore, there exists a equivalence between a minimum-weight $(S,T)$-cutset 
+%$E_{min}$ of $H$ and the following statements: 
+%
+%$E_{min}$ is a minimum$\ldots$
+%\begin{enumerate}
+%\item $\ldots$-weight $(S,T)$-cutset in $H$
+%\item $\ldots$-weight $(S,T)$-vertex separator in $G_*$
+%\item $\ldots$-capacity $(S,T)$-cutset in \ShortT{L}
+%\item $\ldots$-capacity $(S',T')$-cutset in \ShortT{L} (follows from (iii) with Lemma \ref{lemma:lemma1})
+%\item $\ldots$-weight $(S,T)$-vertex separator in $G_H$
+%\item $\ldots$-capacity $(S,T)$-cutset in \ShortExT{H}{V''}
+%\item $\ldots$-capacity $(S',T')$-cutset in \ShortExT{H}{V'} (follows from (vi) with Lemma \ref{lemma:lemma1})
+%\end{enumerate}
 
 \end{proof}
 
-As a consequence of this Theorem a minimum-weight $(S,T)$-cutset of $H$ can 
-also be calculated with \ShortExT{H}{V'}. A open problem is how to obtain the 
+Consequently, we can find a minimum-weight $(S,T)$-cutset of $H$ by calculating
+a minimum-capacity $(S',T')$-cutset of \ShortExT{H}{V'}. A open problem is how to obtain the 
 corresponding minimum-weight $(S,T)$-bipartition. In \ShortT{L} all hypernodes
 reachable from source nodes in the residual graph are part of the first and 
 all not reachable are part of the second block of the bipartition. Since we removed 
@@ -185,7 +236,7 @@ If $e'' \in A$, then $v \in A$, because $c_L(e'',v) = \infty$ and $r_f(e'',v) = 
 Assume, if $v \in A$, then $\forall e \in I(v): e'' \notin A \Rightarrow f(e'',v) = 0$ (Note, $c(e'',v) = \infty$). 
 Otherwise $r_f(v, e'')$ would be greater than zero and this would imply that $e'' \in A$,
 because $v \in A$. Each path $P$ in the \emph{residual graph} of \ShortT{L} from $s \in S$ to $v$ must be of the 
-form $P = (\ldots,e',v)$. For at least one $e \in I(v)$ there must be a positive flow $f(v,e') > 0$,
+form $P = (s,\ldots,e',v)$. For at least one $e \in I(v)$ there must be a positive flow $f(v,e') > 0$,
 otherwise edge $(e',v)$ would be not contained in the \emph{residual graph} of \ShortT{L} (Note, $c_L(e',v) = 0$).
 There is a positive flow leaving node $v$, but there is no flow entering node $v$, because
 $\forall e \in I(v): f(e'',v) = 0$. This violates the conservation of flow
